# serde-wasm-bindgen

./: Cargo.toml  README.md  azure-pipelines.yml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: main.yml
benchmarks/: .gitignore  Cargo.toml  chrome_results.txt  ff_results.txt  index.html  index.js  index.mjs  node_results.txt  package-lock.json  package.json
benchmarks/src/: canada.rs  citm_catalog.rs  color.rs  lib.rs  prim_str.rs  twitter.rs
ci/: azure-install-rust.yml
src/: big-int-checks.js  bindings.rs  de.rs  error.rs  lib.rs  preserve.rs  ser.rs
tests/: browser.rs  ser.rs  serde.rs
tests/common/: mod.rs
