[package]
name = "serde-wasm-bindgen"
version = "0.3.1"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cloudflare/serde-wasm-bindgen"
description = "Native Serde adapter for wasm-bindgen"
categories = ["development-tools::ffi", "wasm", "encoding"]
keywords = ["serde", "serialization", "javascript", "wasm", "webassembly"]

[package.metadata.docs.rs]
features = ["external_doc"]

[dependencies]
serde = "^1.0"
js-sys = "^0.3"
wasm-bindgen = "0.2.43"
fnv = "^1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.24"
serde = { version = "^1.0", features = ["derive"] }
serde_bytes = "0.11.1"
serde_json = "1.0.39"
maplit = "1.0.2"

[workspace]
members = ["benchmarks"]

[profile.release]
lto = true
codegen-units = 1
debug = true

[features]
external_doc = []
bigint_serialization = []
