[package]
name = "serde-wasm-bindgen-benches"
version = "0.1.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
publish = false

[dependencies]
console_error_panic_hook = "0.1.6"
serde = { version = "^1.0", features = ["derive"] }
serde-wasm-bindgen = { path = ".." }
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }

[lib]
crate-type = ["cdylib", "rlib"]
