[package]
name = "serde-wasm-bindgen-benches"
version = "0.1.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
publish = false

[dependencies]
console_error_panic_hook = "0.1.6"
serde = { version = "^1.0", features = ["derive"] }
serde-wasm-bindgen = { path = "..", optional = true }
wasm-bindgen = { version = "^0.2" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["serde-json", "serde-wasm-bindgen"]
serde-json = ["wasm-bindgen/serde-serialize"]
